--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,8 +49,12 @@ test = [
     "pytest >=6.2.5",
 ]
 
+converters = [
+    "pydra >= 0.20.0"
+]
+
 [project.urls]
-repository = "https://github.com/ArcanaFramework/fileformats"
+repository = "https://github.com/ArcanaFramework/fileformats-TODO"
 
 
 [tool.flit.module]
