--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,21 @@
 [build-system]
-requires = ["flit_scm"]
-build-backend = "flit_scm:buildapi"
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
 
 [project]
 name = "fileformats-TODO"
 description = "Classes for representing different file formats in Python classes for use in type hinting in data workflows"
 readme = "README.rst"
-requires-python = ">=3.8"
+requires-python = ">=3.7"
 dependencies = [
-    "fileformats-core"
+    "fileformats >= 0.4"
 ]
 license = {file = "LICENSE"}
 authors = [
-    {name = "YOUR-NAME", email = "YOUR-EMAIL"},
+    {name = "TODO:YOUR-NAME", email = "TODO:YOUR-EMAIL"},
 ]
 maintainers = [
-    {name = "YOUR-NAME", email = "YOUR-EMAIL"},
+    {name = "TODO:YOUR-NAME", email = "TODO:YOUR-EMAIL"},
 ]
 keywords = [
     "file formats",
@@ -60,15 +60,14 @@ converters = [
 [project.urls]
 repository = "https://github.com/ArcanaFramework/fileformats-TODO"
 
+[tool.hatch.version]
+source = "vcs"
 
-[tool.flit.module]
-name = "fileformats.TODO"
+[tool.hatch.build.hooks.vcs]
+version-file = "fileformats/TODO/_version.py"
 
-[tool.flit.sdist]
-exclude = [".gitignore"]
-
-[tool.setuptools_scm]
-write_to = "fileformats/TODO/_version.py"
+[tool.hatch.build.targets.wheel]
+packages = ["fileformats"]
 
 [tool.black]
 target-version = ['py38']
