--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.7", "3.11"]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -36,7 +36,7 @@ jobs:
       run: python -m pip install .[test]
 
     - name: Pytest
-      run: pytest -vvs --cov arcana.xnat  --cov-config .coveragerc --cov-report xml
+      run: pytest -vvs --cov fileformats.TODO  --cov-config .coveragerc --cov-report xml
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
