--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,7 +33,7 @@ jobs:
       run: python -m pip install --upgrade pip
 
     - name: Install Package
-      run: python -m pip install .[test]
+      run: python -m pip install .[test,converters]
 
     - name: Pytest
       run: pytest -vvs --cov fileformats.TODO  --cov-config .coveragerc --cov-report xml
