--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,7 +36,7 @@ jobs:
       run: python -m pip install .[test,converters]
 
     - name: Pytest
-      run: pytest -vvs --cov fileformats.TODO  --cov-config .coveragerc --cov-report xml
+      run: pytest -vvs --cov fileformats.need2change  --cov-config .coveragerc --cov-report xml
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
