updated template instructions and changed 'need2change' to 'CHANGEME'

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,19 +3,19 @@ requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
 
 [project]
-name = "fileformats-need2change"
+name = "fileformats-CHANGEME"
 description = "Classes for representing different file formats in Python classes for use in type hinting in data workflows"
 readme = "README.rst"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 dependencies = [
     "fileformats >= 0.4"
 ]
 license = {file = "LICENSE"}
 authors = [
-    {name = "need2change:YOUR-NAME", email = "need2change:YOUR-EMAIL"},
+    {name = "<YOUR-NAME>", email = "<YOUR-EMAIL>"},
 ]
 maintainers = [
-    {name = "need2change:YOUR-NAME", email = "need2change:YOUR-EMAIL"},
+    {name = "<YOUR-NAME>", email = "<YOUR-EMAIL>"},
 ]
 keywords = [
     "file formats",
@@ -29,7 +29,6 @@ classifiers = [
     "Operating System :: MacOS :: MacOS X",
     "Operating System :: Microsoft :: Windows",
     "Operating System :: POSIX :: Linux",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
@@ -58,20 +57,20 @@ converters = [
 ]
 
 [project.urls]
-repository = "https://github.com/ArcanaFramework/fileformats-need2change"
+repository = "https://github.com/ArcanaFramework/fileformats-CHANGEME"
 
 [tool.hatch.version]
 source = "vcs"
 
 [tool.hatch.build.hooks.vcs]
-version-file = "fileformats/need2change/_version.py"
+version-file = "fileformats/CHANGEME/_version.py"
 
 [tool.hatch.build.targets.wheel]
 packages = ["fileformats"]
 
 [tool.black]
 target-version = ['py38']
-exclude = "fileformats/need2change/_version.py"
+exclude = "fileformats/CHANGEME/_version.py"
 
 [tool.codespell]
 ignore-words = ".codespell-ignorewords"
