--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,6 +23,8 @@ jobs:
     defaults:
       run:
         shell: bash -l {0}
+    env:
+      PIP_BREAK_SYSTEM_PACKAGES: 1
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -42,6 +44,8 @@ jobs:
       run: python3 -m pip install --upgrade pip
     - name: Install Package
       run: python3 -m pip install -e .[test] -e ./extras[test]
+    - name: MyPy
+      run: mypy --install-types --non-interactive .
     - name: Pytest
       run: pytest -vvs --cov fileformats --cov-config .coveragerc --cov-report xml .
     - name: Upload coverage to Codecov
